syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "model/user.proto";

option java_multiple_files = true;
option java_outer_classname = "UserApiProto";
option java_package = "com.spring.grpc.protobuf.api";

service UserApi {
    rpc GetUser(google.protobuf.StringValue) returns (User);
    rpc GetUsers(google.protobuf.Empty) returns (stream User);
    rpc SaveUser(User) returns (google.protobuf.StringValue);
}